--- a/package.json
+++ b/package.json
@@ -1,53 +1,66 @@
 {
-	"name": "cbam-mini-demo",
-	"private": true,
-	"version": "0.0.0",
-	"type": "module",
-	"scripts": {
-		"dev": "vite",
-		"build": "tsc && vite build",
-		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-		"preview": "vite preview",
-		"build:api-doc": "redocly build-docs ./spec.yaml",
-		"test": "jest"
-	},
-	"dependencies": {
-		"@ant-design/icons": "^5.2.6",
-		"@reduxjs/toolkit": "^2.0.1",
-		"antd": "^5.12.8",
-		"dayjs": "^1.11.10",
-		"immer": "^10.0.3",
-		"lodash": "^4.17.21",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"react-redux": "^9.0.4",
-		"tsdef": "^0.0.14",
-		"use-immer": "^0.9.0",
-		"xlsx": "https://cdn.sheetjs.com/xlsx-0.20.1/xlsx-0.20.1.tgz"
-	},
-	"devDependencies": {
-		"@redocly/cli": "^1.6.0",
-		"@swc/cli": "^0.3.9",
-		"@swc/core": "^1.4.0",
-		"@swc/jest": "^0.2.36",
-		"@types/jest": "^29.5.12",
-		"@types/lodash": "^4.14.202",
-		"@types/node": "^20.11.1",
-		"@types/react": "^18.2.43",
-		"@types/react-dom": "^18.2.17",
-		"@typescript-eslint/eslint-plugin": "^6.14.0",
-		"@typescript-eslint/parser": "^6.14.0",
-		"@vitejs/plugin-react-swc": "^3.5.0",
-		"autoprefixer": "^10.4.16",
-		"eslint": "^8.55.0",
-		"eslint-plugin-react-hooks": "^4.6.0",
-		"eslint-plugin-react-refresh": "^0.4.5",
-		"jest": "^29.7.0",
-		"jest-matcher-deep-close-to": "^3.0.2",
-		"postcss": "^8.4.33",
-		"swagger-typescript-api": "^13.0.3",
-		"tailwindcss": "^3.4.1",
-		"typescript": "^5.2.2",
-		"vite": "^5.0.12"
-	}
+  "name": "cbam-mini-demo",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview",
+    "build:api-doc": "redocly build-docs ./spec.yaml",
+    "test": "jest",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
+  },
+  "dependencies": {
+    "@ant-design/icons": "^5.2.6",
+    "@reduxjs/toolkit": "^2.0.1",
+    "antd": "^5.12.8",
+    "dayjs": "^1.11.10",
+    "immer": "^10.0.3",
+    "lodash": "^4.17.21",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-redux": "^9.0.4",
+    "tsdef": "^0.0.14",
+    "use-immer": "^0.9.0",
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.1/xlsx-0.20.1.tgz"
+  },
+  "devDependencies": {
+    "@chromatic-com/storybook": "^1.2.18",
+    "@redocly/cli": "^1.6.0",
+    "@storybook/addon-essentials": "^8.0.0",
+    "@storybook/addon-interactions": "^8.0.0",
+    "@storybook/addon-links": "^8.0.0",
+    "@storybook/addon-onboarding": "^8.0.0",
+    "@storybook/blocks": "^8.0.0",
+    "@storybook/react": "^8.0.0",
+    "@storybook/react-vite": "^8.0.0",
+    "@storybook/test": "^8.0.0",
+    "@swc/cli": "^0.3.9",
+    "@swc/core": "^1.4.0",
+    "@swc/jest": "^0.2.36",
+    "@types/jest": "^29.5.12",
+    "@types/lodash": "^4.14.202",
+    "@types/node": "^20.11.1",
+    "@types/react": "^18.2.43",
+    "@types/react-dom": "^18.2.17",
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
+    "@typescript-eslint/parser": "^6.14.0",
+    "@vitejs/plugin-react-swc": "^3.5.0",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.55.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "eslint-plugin-storybook": "^0.8.0",
+    "jest": "^29.7.0",
+    "jest-matcher-deep-close-to": "^3.0.2",
+    "postcss": "^8.4.33",
+    "storybook": "^8.0.0",
+    "swagger-typescript-api": "^13.0.3",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.2.2",
+    "vite": "^5.0.12"
+  }
 }
