--- a/spec.yaml
+++ b/spec.yaml
@@ -7,7 +7,7 @@ info:
     name: CC Attribution-ShareAlike 4.0 (CC BY-SA 4.0)
     url: https://openweathermap.org/price
 servers:
-  - url: https://cbam.example.aipim.io
+  - url: http://192.168.0.232:8090/cbam/download
 paths:
   /:
     post:
